--- a/manual/en/introduction/App-Manager.html
+++ b/manual/en/introduction/App-Manager.html
@@ -554,12 +554,12 @@
 
         <ul>
           <li>Replace the English docs by a localized version.</li>
-          <li>Read docs offline and faster via URL <em>http://localhost:8668/docs/output/manual/en/index.html</em></li>
+          <li>Read docs offline and faster via URL <em>http://localhost:8668/docs/manual/en/index.html</em></li>
           <li>Use docs for an older Verge3D version or a preview version rather than the latest stable User Manual.</li>
         </ul>
 
         <p>
-          This setting works in Blender, 3ds Max, and Maya menu, in the right-click menu in Blender, and with the App Manager's help button.
+          This setting replaces manual in Blender, 3ds Max, Maya, App Manager, and Puzzles.
         </p>
       </dd>
     </dl>
