--- a/manual/en/introduction/Creating-Desktop-Apps.html
+++ b/manual/en/introduction/Creating-Desktop-Apps.html
@@ -53,7 +53,6 @@
       <dd>Reduced version for Mac App Store. Runs on macOS 10.10 (Yosemite) or later, Intel Macs.</dd>
       <dt>Linux (64-bit)</dt>
       <dd>Linux, 64 bit, such as Ubuntu, Fedora, OpenSuse, or Arch.</dd>
-
       <dt>Windows (ARM)</dt>
       <dd>Windows 10 running on devices with 64-bit ARM processors.</dd>
       <dt>macOS (ARM)</dt>
@@ -62,11 +61,8 @@
       <dd>Reduced version for Mac App Store. Runs on macOS 11 (Big Sur) or later, Apple Silicon (aka M1/M2) Macs.</dd>
       <dt>Linux (ARM)</dt>
       <dd>Linux on 64-bit ARM devices.</dd>
-
       <dt>Windows (32-bit)</dt>
       <dd>Windows 7 or later, 32 bit.</dd>
-      <dt>Linux (32-bit)</dt>
-      <dd>Linux, 32 bit version.</dd>
     </dl>
 
     <p class="note">
@@ -187,6 +183,45 @@
 
     <p>
       See more info on how to use NPM in the <a href="https://www.electronjs.org/docs" target="_blank">Electron docs</a>.
+    </p>
+
+
+    [anchor:no_internet_connection]
+
+    <h2>Creating Apps with no Internet Connection</h2>
+
+    <p>
+      To create ready-to-use desktop apps, App Manager requires internet connection to download Electron builds from the Soft8Soft servers. If you have no or limited internet connection (e.g. behind a proxy or a firewall), you can pre-download Electron builds so that the App Manager picks them up from local files.
+    </p>
+
+    <p>
+      Use the following list to download Electron binaries. You might want to get just one or multiple depending on the target platforms.
+    </p>
+
+    <ul>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-win32-x64.zip">Windows (64-bit)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-darwin-x64.zip">macOS (64-bit)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-mas-x64.zip">macOS App Store (64-bit)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-linux-x64.zip">Linux (64-bit)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-win32-arm64.zip">Windows (ARM)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-darwin-arm64.zip">macOS (ARM)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-mas-arm64.zip">macOS App Store (ARM)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-linux-arm64.zip">Linux (ARM)</a></li>
+      <li><a href="https://cdn.soft8soft.com/electron/v19.0.4/electron-v19.0.4-win32-ia32.zip">Windows (32-bit)</a></li>
+    </ul>
+
+    <p>
+      Copy the downloaded Electron binaries to the App Manager config directory located inside your user folder. Put them as they are (do not unpack!):
+    </p>
+
+    <ul>
+      <li>Windows — <i>AppData\Roaming\Soft8Soft\Product Name</i></li>
+      <li>macOS — <i>Library/Application Support/Product Name</i></li>
+      <li>Linux — <i>.config/product_name</i></li>
+    </ul>
+
+    <p>
+      From now on, the App Manager will be using these builds to create desktop apps instead of downloading them from the internet.
     </p>
 
 
