--- a/manual/en/introduction/Hardware-Related-Issues.html
+++ b/manual/en/introduction/Hardware-Related-Issues.html
@@ -160,11 +160,13 @@
                 <td>Mandatory attributes: <b>position</b>, <b>normal</b>, <b>uv</b>.</td>
             </tr>
             <tr>
-                <td>+2x</td>
+                <td>+2x (WebGL 1.0 only)</td>
                 <td>
-                    Add for each shape key (Blender) / morph target (3ds Max) /
-                    blend shape target (Maya). Maximum amount of attributes for
-                    this category is capped to <b>+12</b>.
+                  Add for each shape key (Blender) / morph target (3ds Max) /
+                  blend shape target (Maya). Maximum amount of attributes for
+                  this category is capped to <b>+12</b>.
+                  <br>
+                  For modern hardware which supports WebGL 2.0 morphing does not consume any attributes.
                 </td>
             </tr>
             <tr>
