--- a/manual/en/puzzles/Materials.html
+++ b/manual/en/puzzles/Materials.html
@@ -82,7 +82,7 @@
 
     <p class="note">
       To use transparent videos, encode your content in WebM or HEVC format and set the material type to *Blend* (see: transparency in
-      <a href="manual/en/blender/Transparency.html#transparency_eevee">Blender</a> /
+      <a href="manual/en/blender/Transparency.html#setting_up_in_blender">Blender</a> /
       <a href="manual/en/max/Transparency.html#blended_vs_masked">Max</a> /
       <a href="manual/en/maya/Transparency.html#blended_vs_masked">Maya</a>).
     </p>
