--- a/manual/en/blender/Lighting-and-Rendering.html
+++ b/manual/en/blender/Lighting-and-Rendering.html
@@ -410,7 +410,7 @@
 
     <p>In addition, there is a panel with Verge3D-specific rendering/export properties:</p>
 
-    <img src="files/lighting-blender/rendering-properties-global.jpg" alt="Verge3D global rendering properties" style="max-width: 365px">
+    <img src="files/lighting-blender/rendering-properties-global.jpg" alt="Verge3D global rendering properties" style="max-width: 372px">
 
     <dl>
       <dt>Copyright</dt>
@@ -470,6 +470,11 @@
         <p class="note">This feature is not related to <strong>.hdr</strong> textures which are commonly used to produce image-based lighting, thus activating it won't improve rendering of such textures.</p>
       </dd>
 
+      <dt>Order-Indep. Transparency</dt>
+      <dd>
+        <p>Enable Order-Independent Transparency (OIT) rendering technique, which solves most transparency issues. Read more about this <a href="manual/en/blender/Transparency.html#oit_rendering">here</a>.</p>
+      </dd>
+
       <dt id="ibl_environment_mode">IBL Env. Mode</dt>
       <dd>
         <p>Algorithm to use for image-based environment lighting.</p>
@@ -478,11 +483,14 @@
           <dt>PMREM (slow)</dt>
           <dd>Use prefiltered, mipmapped radiance environment maps (PMREMs). This property is selected by default because it offers the highest quality and decent performance at the same time.</dd>
 
-          <dt>Light Probe + Cubemap (medium)</dt>
-          <dd>Use simplified image-based specular reflections. This method offers a somewhat better performance.</dd>
+          <dt>Light Probe + Cubemap (deprecated)</dt>
+          <dd>This mode was deprecated in Verge3D 4.3. Specifying it will make your scene fallback to PMREM lighting.</dd>
 
           <dt>Light Probe (fast)</dt>
-          <dd>Disable image-based specular reflections altogether, still the diffuse component will be applied. This is the fastest technique among all.</dd>
+          <dd>Disable image-based specular reflections altogether, still the diffuse component will be applied. This mode is fast but provides decent quality for non-metallic surfaces only (e.g. rendered with <em>BSDF Diffuse</em> shader).</dd>
+
+          <dt>None (fastest)</dt>
+          <dd>Disable image-based lighting for both specular and diffuse reflections. This is the fastest mode among all. It is perfect if you use shadeless (emissive) surfaces or rely solely on light sources to shade your scene.</dd>
         </dl>
       </dd>
 
