--- a/manual/en/maya/Materials.html
+++ b/manual/en/maya/Materials.html
@@ -94,17 +94,17 @@
 
     <dl>
       <dt>Alpha Mode</dt>
-      <dd>select transparency mode: *Auto*, *Opaque*, *Blend* or *Mask*. See <a href="manual/en/maya/Transparency.html">transparency guide</a> for more info.</dd>
+      <dd>Select transparency mode: *Auto*, *Opaque*, *Blend*, *Mask*, *Coverage*, or *Add*. See <a href="manual/en/maya/Transparency.html">transparency guide</a> for more info.</dd>
       <dt>Two Sided</dt>
-      <dd>make your material two-sided. By default, Verge3D renders only front side of materials, enable this option to render their reverse side as well.</dd>
+      <dd>Make your material two-sided. By default, Verge3D renders only front side of materials, enable this option to render their reverse side as well.</dd>
       <dt>Depth Write</dt>
-      <dd>render material depth in depth buffer. Use this option for transparent materials to make them rendered in additive manner.</dd>
+      <dd>Render material depth in depth buffer. Disable this option for transparent materials to make them rendered in <a href="manual/en/maya/Transparency.html#alpha_add">additive</a> manner.</dd>
       <dt>Depth Test</dt>
-      <dd>perform depth test calculations when rendering your material. Disabling depth test is useful when rendering objects inside semi-transparent objects to prevent them from being culled by the covering objects.</dd>
+      <dd>Perform depth test calculations when rendering your material. Disabling depth test is useful when rendering objects inside semi-transparent objects to prevent them from being culled by the covering objects.</dd>
       <dt>Dithering</dt>
-      <dd>reduce banding artifacts by using pixel dithering.</dd>
+      <dd>Reduce banding artifacts by using pixel dithering.</dd>
       <dt>glTF 2.0 Compatible</dt>
-      <dd>force the material to be glTF 2.0 compatible. See the <a href="manual/en/maya/GLTF-Materials.html">following guide</a> for more information.</dd>
+      <dd>Force the material to be glTF 2.0 compatible. See the <a href="manual/en/maya/GLTF-Materials.html">following guide</a> for more information.</dd>
     </dl>
 
 
@@ -161,47 +161,51 @@
     <h3>Bulge</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-9F9D693A-9049-4FA3-A0A5-D5E50077CDD7" target="_blank">here</a>.
+      Create bulge pattern. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-9F9D693A-9049-4FA3-A0A5-D5E50077CDD7" target="_blank">here</a>.
     </p>
 
     [anchor:checker]
     <h3>Checker</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-514468B4-60C0-47CE-A865-55B4FFE873C1" target="_blank">here</a>.
+      Create checkerboard pattern. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-514468B4-60C0-47CE-A865-55B4FFE873C1" target="_blank">here</a>.
     </p>
 
     [anchor:cloth]
     <h3>Cloth</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-3A307B63-0156-480D-AE18-5115D5FE15DB" target="_blank">here</a>.
+      Create cloth pattern. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-3A307B63-0156-480D-AE18-5115D5FE15DB" target="_blank">here</a>.
     </p>
 
     [anchor:file]
     <h3>File</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-309A77DA-F5ED-4474-8413-317D7AB241E6" target="_blank">here</a>.
+      Read texture from file. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-309A77DA-F5ED-4474-8413-317D7AB241E6" target="_blank">here</a>.
     </p>
+
+    <img src="files/materials-maya/file.jpg" alt="Maya File node">
 
     [anchor:grid]
     <h3>Grid</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-1302D193-4DEF-4CEF-8E48-E5B7E84909E5" target="_blank">here</a>.
+      Create grid pattern. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-1302D193-4DEF-4CEF-8E48-E5B7E84909E5" target="_blank">here</a>.
     </p>
 
     [anchor:noise]
     <h3>Noise</h3>
 
-    <p>Perlin noise type is only supported.</p>
+    <p>
+      Create 2D noise pattern. Perlin noise type is the only supported.
+    </p>
 
     [anchor:ramp]
     <h3>Ramp</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-F2C97013-5E4C-41AC-9684-E23AC52C51B8" target="_blank">here</a>.
+      Procedural gradient texture. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-F2C97013-5E4C-41AC-9684-E23AC52C51B8" target="_blank">here</a>.
     </p>
 
 
@@ -215,8 +219,10 @@
     <h3>Env Sphere</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-1FF8EE4D-DEAF-4E6C-895C-D2E6EB670BAA" target="_blank">here</a>.
+      Map input texture image by using equirectangular projection. This node is useful to simulate metallic surfaces without having to use complex (and compute-intensive) physically-based shading algorithms. For example, you can connect it to the Surface Shader node:
     </p>
+
+    <img src="files/materials-maya/env-sphere.jpg" alt="Maya Env Sphere node">
 
 
     [anchor:other_textures]
@@ -228,7 +234,7 @@
     <h3>Layered Texture</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-770E22B9-E32A-4E14-A4DC-23656D885AEE" target="_blank">here</a>.
+      Used to create multi-layered textures. Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-770E22B9-E32A-4E14-A4DC-23656D885AEE" target="_blank">here</a>.
     </p>
 
 
@@ -242,14 +248,14 @@
     <h3>Add Double Linear</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-3FF423AA-407D-4D57-9888-FC9A2F350E55" target="_blank">here</a>.
+      Calculate the sum of two input values. Since double-precision values are not supported in WebGL, this node works exactly like *Add* operation in the <a href="manual/en/maya/Materials.html#floatMath">Float Math</a> node.
     </p>
 
     [anchor:addMatrix]
     <h3>Add Matrix</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-C1812049-7EBF-4288-B4C7-A712090866CC" target="_blank">here</a>.
+      Calculate sum of input matrices.
     </p>
 
     [anchor:blendColors]
@@ -413,6 +419,8 @@
 
     <p>Make sure you have LookdevKit plug-in enabled before using any of these nodes.</p>
 
+    <img src="files/materials-maya/enable-lookdevkit.jpg" alt="Enabling LookdevKit plugin in Maya" style="max-width: 500px">
+
     [anchor:channels]
     <h3>Channels</h3>
 
@@ -501,7 +509,7 @@
     <h3>Float Math</h3>
 
     <p>
-      Read more <a href="https://help.autodesk.com/view/MAYAUL/2023/ENU/?guid=GUID-ED31708F-8C54-4EB2-981D-4FCAFE8E45C9" target="_blank">here</a>.
+      Perform math operation on input values: add, subtract, multiply, divide, min, max, or power.
     </p>
 
     [anchor:premultiply]
@@ -540,47 +548,53 @@
     [anchor:aiAbs]
     <h3>aiAbs</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>
+      Calculate absolute value of input color/vector. See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.
+    </p>
 
     [anchor:aiAdd]
     <h3>aiAdd</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>
+      Calculate sum of colors/vectors. See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.
+    </p>
 
     [anchor:aiAtan]
     <h3>aiAtan</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>
+      Calculate 2-argument arctangent of input vectors. See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.
+    </p>
 
     [anchor:aiCompare]
     <h3>aiCompare</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiComplement]
     <h3>aiComlement</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiCross]
     <h3>aiCross</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiDivide]
     <h3>aiDivide</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiDot]
     <h3>aiDot</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiExp]
     <h3>aiExp</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiFacingRatio]
     <h3>aiFacingRatio</h3>
@@ -593,32 +607,32 @@
     [anchor:aiFraction]
     <h3>aiFraction</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiIsFinite]
     <h3>aiIsFinite</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiLength]
     <h3>aiLength</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiLog]
     <h3>aiLog</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiMax]
     <h3>aiMax</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiMin]
     <h3>aiMin</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiMixShader]
     <h3>aiMixShader</h3>
@@ -628,22 +642,22 @@
     [anchor:aiModulo]
     <h3>aiModulo</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiMultiply]
     <h3>aiMultiply</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiNegate]
     <h3>aiNegate</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiNormalize]
     <h3>aiNormalize</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiNormalMap]
     <h3>aiNormalMap</h3>
@@ -660,15 +674,25 @@
     [anchor:aiPow]
     <h3>aiPow</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiRaySwitch]
     <h3>aiRaySwitch</h3>
 
+    <p>
+      When used in combination with *aiSkyDomeLight*, this node splits rendering of the camera background and environment lighting. Node tree connected to the *Camera* input will be used for background while *Diffuse Reflection* will be used for environment.
+    </p>
+
+    <img src="files/materials-maya/ai-ray-switch.jpg" alt="Maya aiRaySwitch shader">
+
+    <p class="note">
+      This node setup is supported neither in Maya viewport nor in the Arnold renderer. Preview your scene in Verge3D to see how it works.
+    </p>
+
     [anchor:aiReciprocal]
     <h3>aiReciprocal</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiShadowMatte]
     <h3>aiShadowMatte</h3>
@@ -676,29 +700,29 @@
     [anchor:aiSign]
     <h3>aiSign</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiSkyDomeLight]
     <h3>aiSkyDomeLight</h3>
 
     <p>
-      Used to create image-based environment lighting. See the <a href="manual/en/maya/Lighting-and-Rendering.html">Lighting and Rendering</a> section for more info.
+      Used to create image-based environment lighting. See the <a href="manual/en/maya/Lighting-and-Rendering.html#environment_lighting">Lighting and Rendering</a> section for more info.
     </p>
 
     [anchor:aiSqrt]
     <h3>aiSqrt</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiSubtract]
     <h3>aiSubtract</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
     [anchor:aiTrigo]
     <h3>aiTrigo</h3>
 
-    <p>See more <a href="https://docs.arnoldrenderer.com/display/A5AFMUG/Math+Shaders" target="_blank">here</a>.</p>
+    <p>See more <a href="https://help.autodesk.com/view/ARNOL/ENU/?guid=arnold_user_guide_ac_shading_ac_math_shaders_html" target="_blank">here</a>.</p>
 
 
     [anchor:performance_considerations]
