--- a/manual/en/maya/Transparency.html
+++ b/manual/en/maya/Transparency.html
@@ -37,23 +37,28 @@
     </p>
 
     <p>
-      Use *Alpha Mode* dropdown in material settings to choose between blending and masking.
+      Use *Alpha Mode* dropdown in the material settings to choose between blending and masking:
     </p>
 
-    <img src="files/transparency-maya/alpha-mode.jpg" alt="Setting alpha mode in Maya" style="max-width: 427px">
+    <img src="files/transparency-maya/alpha-mode.jpg" alt="Setting alpha mode in Maya" style="max-width: 480px">
+
+    <p>
+      There is also variation of the *Mask* mode called *Coverage*. It uses MSAA rendering to improve the quality of alpha clipping.
+    </p>
+
 
     [anchor:alpha_add]
 
-    <h2>Additive Composing (aka No Depth Writes)</h2>
+    <h2>Additive Compositing (aka Additive Blending)</h2>
 
     <p>
-      Verge3D also offers a special mode for disabling writing to the depth buffer while rendering. This results in polygons being excluded from pixel depth comparison. Such polygons are composited in additive manner, which sometimes can help get rid of blending artifacts.
+      Verge3D also offers a special method for rendering transparent surfaces called additive compositing. By blending in additive manner and excluding polygons from pixel depth comparison you can get rid of transparency artifacts.
     </p>
 
-    <img src="files/transparency-common/no-depth-writes.jpg" alt="Additive compositing transparency example">
+    <img src="files/transparency-common/no-depth-writes.jpg" alt="Alpha blend vs additive compositing">
 
     <p>
-      Select *Add* or *Blend* in the *Alpha Mode* dropdown and uncheck the *Depth Write* option in material settings to enable this mode. In addition, you'll need to increase the *Rendering Order* value in <a href="manual/en/maya/Lighting-and-Rendering.html#per_object_rendering_settings">object settings</a> to make you transparent object rendered above all.
+      To enable this mode select *Add* in the *Alpha Mode* dropdown and uncheck the *Depth Write* option in material settings to enable this mode. In addition, you'll need to increase the *Rendering Order* value in <a href="manual/en/maya/Lighting-and-Rendering.html#per_object_rendering_settings">object settings</a> to make your transparent object rendered above all.
     </p>
 
 
@@ -107,8 +112,9 @@
     </a>
 
     <p>
-      Use the *Alpha Mode* dropdown to choose between transparency modes.
+      Use the <strong>Alpha Mode</strong> dropdown to choose between the supported transparency modes: *Auto*, *Opaque*, *Blend*, or *Mask*.
     </p>
+
 
     <h2>Got Questions?</h2>
 
