Update English docs

--- a/manual/en/introduction/Asset-compression.html
+++ b/manual/en/introduction/Asset-compression.html
@@ -123,11 +123,11 @@
       Simply change:
 
       <code>
-        var url = 'my_awesome_app.gltf';
+        const SCENE_URL = 'my_awesome_app.gltf';
       </code>
       to:
       <code>
-        var url = 'my_awesome_app.gltf.xz';
+        const SCENE_URL = 'my_awesome_app.gltf.xz';
       </code>
 
       in <i>your_awesome_app.js</i> file.
