--- a/manual/en/introduction/FAQ.html
+++ b/manual/en/introduction/FAQ.html
@@ -88,6 +88,8 @@
       In the context of web development, client-side means that something happens in the browser running on the user's device. Server-side means that something happens on the web server.
     </p>
 
+    <img src="files/faq/client-server.svg" alt="Basic client-server model" style="max-width: 700px">
+
     <p>
       If we say that Verge3D is a client-side solution, that means that your 3D app works in the browser and there is no server-side programming or additional frameworks required to get your app up and running. This is a key feature of Verge3D that makes it so easy to use. However, since we're talking about web development, the existence of some basic server functionality is implied. In most cases, this functionality is limited to serving application files to the browser.
     </p>
@@ -529,6 +531,10 @@ myconfigurator.bin
       <dd>Most advanced, 1000000+ combinations. Similarly to Recliner, UI was made with Webflow editor.</dd>
     </dl>
 
+    <p>
+      Also, if you manage to use WordPress CMS, pay attention to <a href="manual/en/introduction/Wordpress-Plugin.html#woocommerce">WooCommerce Composite Products</a> extension which can help you to build Verge3D-friendly 3D web configurators with ease.
+    </p>
+
 
     [anchor:easy_selling]
 
@@ -597,6 +603,24 @@ myconfigurator.bin
     [anchor:programming_with_puzzles]
 
     <h2>Programming with Puzzles</h2>
+
+
+    [anchor:learn_first]
+
+    <h3>Which puzzles should I learn first?</h3>
+
+    <p>
+      The list is really short!
+    </p>
+
+    <ul>
+      <li><a href="manual/en/puzzles/Events.html#when_clicked">when clicked</a> — to perform various tasks when user clicks on something.</li>
+      <li><a href="manual/en/puzzles/Objects.html#hide">hide</a>/<a href="manual/en/puzzles/Objects.html#show">show</a> — to hide/show objects making your scene customizable.</li>
+      <li><a href="manual/en/puzzles/Materials.html#assign_material">assign material</a> — to create basic configurators.</li>
+      <li><a href="manual/en/puzzles/Animation.html#play_animation">play animation</a> — to animate your objects (or materials).</li>
+    </ul>
+
+    [demo:simple_configurator]
 
 
     [anchor:how_to_password_protect_my_app]
