--- a/manual/en/programmers_guide/Wordpress-Advanced-Guide.html
+++ b/manual/en/programmers_guide/Wordpress-Advanced-Guide.html
@@ -12,7 +12,7 @@
     <h1>WordPress Advanced Guide</h1>
 
     <p>
-      This guide includes more in-depth topics on how to use Verge3D with WordPress, including customization of WordPress plugin, e-commerce protocol specification, etc.
+      This guide includes more in-depth topics on how to use Verge3D with WordPress, including customization of WordPress plugin, e-commerce protocol specification, etc. For basic topics please refer to the <a href="manual/en/introduction/Wordpress-Plugin.html">WordPress Plugin</a> section of the User Manual.
     </p>
 
     <h2>Contents</h2>
